--- a/public/stylesheets/bitstarter.css
+++ b/public/stylesheets/bitstarter.css
@@ -89,4 +89,8 @@ p {
 .myappname-footer a {
     color: #ccccff;
 }
-
+/* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+ div.addthis_toolbox {
+  width:180px;
+  margin: 0 auto;
+ }
